--- a/README
+++ b/README
@@ -28,3 +28,25 @@ bigsample_mycat_v13.fits
     contains: rpet and M20 only. M20 is not great -- lots of outliers; Mtot 
     centers need to be looked at again
 
+i don't remember what 14-17 are...
+
+bigsample_mycat_v18.dat
+    contains all the updated parameters including two versions of Gini and M20
+    (using both an elliptical aperture and the avg sb at 1 petrosian radius to 
+    define the galaxy pixels)
+    Except I think there was still a problem with Gini... one little bug
+
+bigsample_mycat_v19.dat
+    This is the latest and greatest. Everything in here is about as good as I 
+    can get it! TWO versions of Gini and M20 and they both look great
+    Asymmetry is still wonky but I don't know how to correct it and whether 
+    that's where I should put my focus right now. 
+    
+Next Up:
+1.  Test out the LLE using mycat_v19.dat. Need to see how it works and play 
+    around with it a bit. Need to properly normalize all the parameters so that
+    they are on equal footing.
+2.  Make cutouts of the SDSS galaxies. These will be the training set for my codez
+3.  Code up the MID statistics. 
+
+
